Fix mobile sidebar in dark mode

--- a/app/javascript/stylesheets/colors.css
+++ b/app/javascript/stylesheets/colors.css
@@ -85,6 +85,10 @@
 
   --prettyprint-background-color: white;
   --prettyprint-color: black;
+
+  --sidebar-background: white;
+  --close-sidebar-background: #EEE;
+  --close-sidebar-border-bottom: black;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -176,5 +180,9 @@
 
     --prettyprint-background-color: #181a1b;
     --prettyprint-color: #e8e6e3;
+
+    --sidebar-background: #181a1b;
+    --close-sidebar-background: #222426;
+    --close-sidebar-border-bottom: #8c8273;
   }
 }
